--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
         </title>
     </head>
     <body>
-        Hello, world!!
+        Hello, world!! Hello from the other side!!
     </body>
 </html>
